# lp-llm-chef

./: CLAUDE.md  README.md  pyproject.toml
.claude/skills/llmn/: SKILL.md
.claude/skills/mealplan/: SKILL.md
.claude/skills/multiperiod/: SKILL.md
.claude/skills/recipes/: SKILL.md
.claude/skills/template/: SKILL.md
.claude/skills/tracking/: SKILL.md
examples/constraints/: bulking.yaml  cutting.yaml  maintenance.yaml  practical_cutting.yaml  slowcarb_pescatarian.yaml  staples_only.yaml
examples/prices/: sample_prices.csv
scripts/: setup-meal-plan.sh  tag-staple-foods.sh
src/llmn/: __main__.py  cli.py
src/llmn/agent/: __init__.py  response.py  schema.py
src/llmn/config/: __init__.py  settings.py
src/llmn/data/: __init__.py  dietary_patterns.py  food_categories.py  pattern_pools.py  pattern_staples.py  usda_loader.py
src/llmn/db/: __init__.py  connection.py  schema.py
src/llmn/explore/: __init__.py  diagnosis.py  foods.py  suggest.py  whatif.py
src/llmn/export/: __init__.py  formatters.py  llm_prompt.py  meal_allocator.py  meal_consolidator.py  shopping_list.py
src/llmn/optimizer/: __init__.py  batch.py  constraints.py  models.py  multiperiod_constraints.py  multiperiod_diagnosis.py  multiperiod_models.py  multiperiod_solver.py  serialization.py  solver.py  (+1 more)
src/mealplan/: __init__.py  __main__.py  cli.py
tests/: __init__.py  conftest.py  test_categories.py  test_cli.py  test_constraints.py  test_data_quality.py  test_ema.py  test_meal_allocator.py  test_multiperiod.py  test_serialization.py  test_solver.py  test_tdee_filter.py  test_templates.py
(+60 files in other folders)
