[project]
name = "llmn"
version = "0.1.0"
description = "LLM Nutrition - diet optimization for humans and AI agents"
requires-python = ">=3.11"

dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "qpsolvers[clarabel]>=4.0",
    "pandas>=2.0",
    "typer[all]>=0.9",
    "rich>=13.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
    "mypy",
]

[project.scripts]
llmn = "llmn.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llmn"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.9"
strict = true
